--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -339,5 +340,137 @@ template {
  */
 [hidden] {
   display: none;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  background: linear-gradient(101.56deg, #2C2C2C 1.56%, #1C1C1C 95.55%);
+  color: #E4E4E4;
+  font-family: 'Montserrat', sans-serif;
+}
+
+img {
+  max-width: 100%;
+}
+
+svg path {
+  fill: inherit;
+  stroke: inherit;
+  stroke-width: inherit;
+}
+
+.container {
+  max-width: 1120px;
+  margin: auto;
+}
+
+.logo {
+  fill: #eeac05;
+  width: 60px;
+}
+
+.title {
+  font-style: normal;
+  font-weight: 494;
+  font-size: 50px;
+  line-height: 56px;
+  margin: 0;
+  padding: 0;
+}
+
+.subtitle {
+  font-weight: 375;
+  font-size: 20px;
+  line-height: 22px;
+  margin: 10px 0 40px 0;
+}
+
+.btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  background: linear-gradient(87.32deg, #E2A300 4.47%, #E29500 95.53%);
+  -webkit-box-shadow: 0px 2px 13px rgba(226, 158, 0, 0.48);
+          box-shadow: 0px 2px 13px rgba(226, 158, 0, 0.48);
+  color: #000;
+  border: none;
+  font-style: normal;
+  font-weight: 494;
+  font-size: 22px;
+  line-height: 24px;
+  padding: 18px 35px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: linear-gradient(87.32deg, #db9d01 4.47%, #d48e00 95.53%);
+  -webkit-transition: all .4s ease 0s;
+  transition: all .4s ease 0s;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+.header-item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+.header-item__img {
+  background-image: url(../img/bg.png);
+  background-position-x: -400px;
+  background-size: 1300px;
+  height: 100%;
+  background-repeat: no-repeat;
+}
+
+.header-item__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 80px;
+}
+
+.header-item__link {
+  margin-top: 250px;
+  font-weight: 375;
+  font-size: 16px;
+  line-height: 20px;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
+}
+
+.header-item__link--backout {
+  color: #C35B48;
+  font-weight: 495;
+}
+
+.arrow-right {
+  margin-left: 20px;
+  width: 24px;
+  height: 24px;
 }
 /*# sourceMappingURL=style.css.map */
