--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,42 @@ template {
   display: none;
 }
 
+@-webkit-keyframes move {
+  0%, 20%, 60%, 100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    transform: translateX(0);
+  }
+  40% {
+    -webkit-transform: translateX(20px);
+            transform: translateX(20px);
+    transform: translateX(20px);
+  }
+  80% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+    transform: translateX(10px);
+  }
+}
+
+@keyframes move {
+  0%, 20%, 60%, 100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    transform: translateX(0);
+  }
+  40% {
+    -webkit-transform: translateX(20px);
+            transform: translateX(20px);
+    transform: translateX(20px);
+  }
+  80% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+    transform: translateX(10px);
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -451,7 +487,7 @@ svg path {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-left: 80px;
+  padding: 10px 0 0 80px;
 }
 
 .header-item__link {
@@ -472,5 +508,11 @@ svg path {
   margin-left: 20px;
   width: 24px;
   height: 24px;
+  -webkit-animation: move;
+          animation: move;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
 }
 /*# sourceMappingURL=style.css.map */
