--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ svg path {
 }
 
 .container {
-  max-width: 1120px;
+  width: 1120px;
   margin: auto;
 }
 
@@ -673,6 +673,8 @@ svg path {
           justify-content: space-between;
   width: 470px;
   margin-bottom: 45px;
+  -webkit-filter: drop-shadow(0px 0px 410px rgba(240, 0, 240, 0.42));
+          filter: drop-shadow(0px 0px 410px rgba(240, 0, 240, 0.42));
 }
 
 .form-quiz-card {
@@ -721,6 +723,77 @@ svg path {
 
 .type-design {
   position: absolute;
-  z-index: -1;
+  visibility: hidden;
+}
+
+.budget-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 20px 0 20px;
+  margin-bottom: 30px;
+  width: 450px;
+  height: 200px;
+  background: #2A2A2A;
+  -webkit-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.47);
+          box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.47);
+  border-radius: 18px;
+  margin-bottom: 65px;
+  -webkit-filter: drop-shadow(0px 0px 410px rgba(240, 16, 0, 0.42));
+          filter: drop-shadow(0px 0px 410px rgba(240, 16, 0, 0.42));
+}
+
+.budget-content__output {
+  margin-left: 50px;
+  font-size: 20px;
+  display: inline-block;
+  position: relative;
+  width: 90px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 3px;
+  background: #1b1b1c;
+  color: #E4E4E4;
+  padding: 5px 10px;
+  margin-left: 8px;
+}
+
+.budget-content__output::after {
+  position: absolute;
+  top: 8px;
+  left: -7px;
+  width: 0;
+  height: 0;
+  border-top: 7px solid transparent;
+  border-right: 7px solid #1b1b1c;
+  border-bottom: 7px solid transparent;
+  content: '';
+}
+
+.budget-content__slider {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  height: 20px !important;
+  width: 350px;
+  border-radius: 10em;
+  background: #e2a300;
+  background: -webkit-gradient(linear, left top, right top, from(#e2a300), to(#fc7046));
+  background: linear-gradient(90deg, #e2a300 0%, #fc7046 100%);
+  outline: none;
+}
+
+.budget-content__slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: linear-gradient(87.32deg, #E2A300 4.47%, #E29500 95.53%);
+  cursor: pointer;
+  border: 4px solid #f4f4f4;
 }
 /*# sourceMappingURL=style.css.map */
