--- a/css/style.css
+++ b/css/style.css
@@ -671,10 +671,6 @@ svg path {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 470px;
-  margin-bottom: 45px;
-  -webkit-filter: drop-shadow(0px 0px 410px rgba(240, 0, 240, 0.42));
-          filter: drop-shadow(0px 0px 410px rgba(240, 0, 240, 0.42));
 }
 
 .form-quiz-card {
@@ -719,6 +715,10 @@ svg path {
 
 .first-step-cards {
   position: relative;
+  width: 470px;
+  margin-bottom: 45px;
+  -webkit-filter: drop-shadow(0px 0px 410px rgba(240, 0, 240, 0.42));
+          filter: drop-shadow(0px 0px 410px rgba(240, 0, 240, 0.42));
 }
 
 .type-design {
@@ -795,5 +795,22 @@ svg path {
   background: linear-gradient(87.32deg, #E2A300 4.47%, #E29500 95.53%);
   cursor: pointer;
   border: 4px solid #f4f4f4;
+}
+
+.third-step-cards {
+  position: relative;
+}
+
+.third-step-cards {
+  position: relative;
+  -webkit-filter: drop-shadow(0px 0px 410px rgba(0, 240, 200, 0.42));
+          filter: drop-shadow(0px 0px 410px rgba(0, 240, 200, 0.42));
+  width: 720px;
+  margin-bottom: 45px;
+}
+
+.type-level {
+  position: absolute;
+  visibility: hidden;
 }
 /*# sourceMappingURL=style.css.map */
