--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,13 @@ svg path {
   display: block !important;
 }
 
+.focus {
+  background: #171717 !important;
+  opacity: .9;
+  -webkit-transition: all .4s ease 0s;
+  transition: all .4s ease 0s;
+}
+
 .header {
   display: none;
   -webkit-box-align: center;
@@ -694,12 +701,8 @@ svg path {
           box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.47);
   border-radius: 18px;
   cursor: pointer;
-  -webkit-transition: all .1s ease 0s;
-  transition: all .1s ease 0s;
-}
-
-.form-quiz-card:focus {
-  opacity: .9;
+  -webkit-transition: all .2s ease 0s;
+  transition: all .2s ease 0s;
 }
 
 .form-quiz-card__title {
@@ -795,10 +798,6 @@ svg path {
   background: linear-gradient(87.32deg, #E2A300 4.47%, #E29500 95.53%);
   cursor: pointer;
   border: 4px solid #f4f4f4;
-}
-
-.third-step-cards {
-  position: relative;
 }
 
 .third-step-cards {
