--- a/css/style.css
+++ b/css/style.css
@@ -724,6 +724,10 @@ svg path {
           filter: drop-shadow(0px 0px 410px rgba(240, 0, 240, 0.42));
 }
 
+.first-step-img {
+  width: 120px;
+}
+
 .type-design {
   position: absolute;
   visibility: hidden;
