--- a/css/style.css
+++ b/css/style.css
@@ -816,4 +816,50 @@ svg path {
   position: absolute;
   visibility: hidden;
 }
+
+.fourth-step-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 0 0 25px 0;
+}
+
+.fourth-step-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -ms-flex-preferred-size: 31%;
+      flex-basis: 31%;
+  height: 90px;
+}
+
+.fourth-step-img {
+  width: 60px;
+  margin-right: 20px;
+}
+
+.fourth-step-title {
+  margin: 0;
+}
+
+.type-site {
+  position: absolute;
+  visibility: hidden;
+}
 /*# sourceMappingURL=style.css.map */
