add send data quiz in telegram

--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,7 @@ body {
   background: linear-gradient(101.56deg, #2C2C2C 1.56%, #1C1C1C 95.55%);
   color: #E4E4E4;
   font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
 }
 
 img {
