--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,7 @@ body {
   background: linear-gradient(101.56deg, #2C2C2C 1.56%, #1C1C1C 95.55%);
   color: #E4E4E4;
   font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
 }
 
 img {
@@ -502,6 +503,10 @@ input::-webkit-inner-spin-button {
   margin: 40px 0 40px 0;
   -webkit-animation: set 60s linear 0s infinite normal forwards;
           animation: set 60s linear 0s infinite normal forwards;
+}
+
+.logo-logo-link {
+  cursor: pointer;
 }
 
 .title {
@@ -973,9 +978,9 @@ input::-webkit-inner-spin-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
