--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,7 @@ input::-webkit-inner-spin-button {
   font-size: 22px;
   line-height: 24px;
   padding: 18px 35px;
+  text-decoration: none;
   cursor: pointer;
   -webkit-transition: all .4s ease 0s;
   transition: all .4s ease 0s;
@@ -770,6 +771,108 @@ input::-webkit-inner-spin-button {
 
 .btn-send {
   display: none;
+}
+
+.success {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.success-subtitle {
+  margin: 5px 0 30px 0;
+}
+
+.success-item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+.success-item__img {
+  background-image: url(../img/bg-success.png);
+  background-position-x: -400px;
+  background-size: 1300px;
+  height: 100%;
+  background-repeat: no-repeat;
+}
+
+.success-item__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 10px 0 0 80px;
+}
+
+.success-item__link {
+  margin-top: 100px;
+  font-weight: 375;
+  font-size: 16px;
+  line-height: 20px;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
+}
+
+.success-item__link--backout {
+  color: #C35B48;
+  font-weight: 495;
+}
+
+.success-telegram-channel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 375;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.success-telegram-channel__link {
+  text-decoration: none;
+  margin-left: 12px;
+}
+
+.success-btn {
+  margin-top: 100px;
+}
+
+.promocode {
+  color: #eeac05;
+  margin-bottom: 30px;
+  font-weight: 494;
+  font-size: 40px;
+  line-height: 56px;
+  padding: 25px;
+  border: 6px dashed #908f8f;
+}
+
+.telegram {
+  fill: #E4E4E4;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: move;
+          animation: move;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
 }
 
 .form-quiz {
