--- a/css/style.css
+++ b/css/style.css
@@ -623,8 +623,6 @@ input::-webkit-inner-spin-button {
   font-weight: 375;
   font-size: 16px;
   line-height: 20px;
-  -ms-flex-line-pack: end;
-      align-content: flex-end;
 }
 
 .header-item__link--backout {
@@ -1155,5 +1153,88 @@ input::-webkit-inner-spin-button {
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
   margin-bottom: 17px;
+}
+
+@media (max-width: 1024px) {
+  .title {
+    font-size: 40px;
+  }
+  .header-item__img {
+    background-position-x: -600px;
+  }
+  .header-item__link {
+    margin-top: 140px;
+  }
+  .header-item__content {
+    padding: 0 20px 0 50px;
+  }
+}
+
+@media (max-width: 820px) {
+  .logo {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 30px;
+  }
+  .title {
+    font-size: 43px;
+    line-height: 44px;
+    margin-bottom: 10px;
+  }
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header-item {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .header-item__img {
+    width: 100%;
+    background-position: 0 0;
+    background-size: cover;
+  }
+  .header-item__content {
+    -ms-flex-preferred-size: 90%;
+        flex-basis: 90%;
+    padding: 30px;
+  }
+  .header-item__link {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 540px) {
+  .title {
+    font-size: 37px;
+  }
+  .subtitle {
+    font-size: 18px;
+  }
+  .logo {
+    width: 48px;
+  }
+  .btn {
+    padding: 16px 30px;
+  }
+  .header-item__link {
+    margin-top: 35px;
+    font-size: 13px;
+  }
+  .header-item__content {
+    padding: 20px;
+  }
+}
+
+@media (max-width: 435px) {
+  .title {
+    font-size: 32px;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
