--- a/css/style.css
+++ b/css/style.css
@@ -1155,6 +1155,17 @@ input::-webkit-inner-spin-button {
   margin-bottom: 17px;
 }
 
+@media (max-width: 1280px) {
+  .success-item__content {
+    padding: 10px 40px 0 40px;
+    -ms-flex-preferred-size: 65%;
+        flex-basis: 65%;
+  }
+  .success-item__img {
+    background-position-x: -558px;
+  }
+}
+
 @media (max-width: 1024px) {
   .title {
     font-size: 40px;
@@ -1167,6 +1178,13 @@ input::-webkit-inner-spin-button {
   }
   .header-item__content {
     padding: 0 20px 0 50px;
+  }
+  .promocod {
+    font-size: 38px;
+    padding: 20px;
+  }
+  .success-title {
+    line-height: 44px;
   }
 }
 
@@ -1205,6 +1223,30 @@ input::-webkit-inner-spin-button {
   .header-item__link {
     margin-top: 100px;
   }
+  .success {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .success-btn {
+    margin-top: 50px;
+  }
+  .success-item {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .success-item__img {
+    width: 100%;
+    background-position: 0 0;
+    background-size: cover;
+  }
+  .success-item__content {
+    -ms-flex-preferred-size: 90%;
+        flex-basis: 90%;
+    padding: 30px;
+  }
 }
 
 @media (max-width: 540px) {
@@ -1227,14 +1269,42 @@ input::-webkit-inner-spin-button {
   .header-item__content {
     padding: 20px;
   }
+  .success-item__img {
+    background-position-y: -50px;
+  }
+  .success-item__content {
+    -ms-flex-preferred-size: 220%;
+        flex-basis: 220%;
+  }
+  .success-title {
+    margin-bottom: 5px;
+  }
+  .success-btn {
+    margin-top: 30px;
+  }
+  .promocode {
+    font-size: 34px;
+    padding: 15px;
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 435px) {
+  .btn {
+    font-size: 20px;
+  }
   .title {
     font-size: 32px;
   }
   .subtitle {
     font-size: 16px;
+  }
+  .promocode {
+    font-size: 28px;
+    padding: 10px;
+  }
+  .success-title {
+    font-size: 29px;
   }
 }
 /*# sourceMappingURL=style.css.map */
