--- a/css/style.css
+++ b/css/style.css
@@ -499,6 +499,7 @@ input::-webkit-inner-spin-button {
 }
 
 .logo-form-quiz {
+  text-decoration: none;
   width: 50px;
   height: 50px;
   margin: 40px 0 40px 0;
@@ -1164,6 +1165,9 @@ input::-webkit-inner-spin-button {
   .success-item__img {
     background-position-x: -558px;
   }
+  .container {
+    width: 992px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -1186,9 +1190,18 @@ input::-webkit-inner-spin-button {
   .success-title {
     line-height: 44px;
   }
+  .container {
+    max-width: 90%;
+  }
+  .subtitle-item {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 820px) {
+  body {
+    overflow-y: auto;
+  }
   .logo {
     width: 60px;
     height: 60px;
@@ -1246,6 +1259,69 @@ input::-webkit-inner-spin-button {
     -ms-flex-preferred-size: 90%;
         flex-basis: 90%;
     padding: 30px;
+  }
+  .progress {
+    height: 330px;
+    width: 2px;
+    top: 20px;
+    left: 23px;
+  }
+  .progress-success {
+    height: 0;
+    width: 2px;
+    top: 0;
+    left: 0;
+  }
+  .progress-bar {
+    width: 10%;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .progress-bar__item {
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  .form-quiz-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .form-quiz-item {
+    width: 600px;
+  }
+  .third-step-cards {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .third-step-card {
+    width: 180px;
+    height: 180px;
+    margin-right: 20px;
+  }
+  .third-step-card:last-child {
+    margin-right: 0;
+  }
+  .fourth-step-card {
+    -ms-flex-preferred-size: 45%;
+        flex-basis: 45%;
+  }
+  .fourth-step-img {
+    margin-left: 10px;
   }
 }
 
